testdata/DuplicateHEnv.txt
testdata/DuplicateHEnv.hs:7:20: error:
    • Int duplicated in HEnv '[Int, Char, Bool, Int]
    • In the expression: select h
      In an equation for ‘testDuplicateEnv’:
          testDuplicateEnv
            = select h
            where
                h :: HEnv '[Int, Char, Bool, Int]
                h = fromGeneric (1, 'a', True, 2)
  |
7 | testDuplicateEnv = select h
  |                    ^^^^^^^^

testdata/DuplicateHEnv.hs:14:21: error:
    • Int duplicated in HEnv '[Char, Int, Bool, Int]
    • In the expression: select h
      In an equation for ‘testDuplicateEnv'’:
          testDuplicateEnv'
            = select h
            where
                h :: HEnv '[Char, Int, Bool, Int]
                h = fromGeneric ('a', 1, True, 2)
   |
14 | testDuplicateEnv' = select h
   |                     ^^^^^^^^
